fixed the horizontal scrollbar issue, sorry about that  :disappointed_relieved:

--- a/css/main.sass
+++ b/css/main.sass
@@ -1,9 +1,9 @@
 @import "bourbon"
+@import url(http://nicholastodor.com/sf/usesf.css)
 *
 	margin: 0px
-
 body
-	font-family: sans-serif
+	font-family: 'San Francisco Display', sans-serif
 header
 	height: 100vh
 	display: flex
@@ -47,5 +47,4 @@ footer
 	display: flex
 	justify-content: center
 	align-items: center
-	width: 100vw
 	background: #aaa
